added experimental code for new ocean wave generator.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@356 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-08  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* user_interface.cpp
+	  - made use of new ocean wave generator for distant water
+	    simulation (pseudo bump maps)
+
 2003-12-05  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* mapcompile.cpp
 	  - now islands are treated right. Just one simple trick worked
