Now waves are computed also with the ocean water generator.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@357 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -2,6 +2,8 @@
 	* user_interface.cpp
 	  - made use of new ocean wave generator for distant water
 	    simulation (pseudo bump maps)
+	  - and also for water display lists.
+	    THE FFTW3 LIBRARY IS NEEDED FOR COMPILATION FROM NOW ON.
 
 2003-12-05  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* mapcompile.cpp
