added water surface normals.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@358 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-14  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* user_interface.cpp ocean_wave_generator.h
+	  - added computation for water surface normals.
+
 2003-12-08  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* user_interface.cpp
 	  - made use of new ocean wave generator for distant water
