added choppy waves, bugfixes.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@359 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,6 +1,9 @@
 2003-12-14  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* user_interface.cpp ocean_wave_generator.h
 	  - added computation for water surface normals.
+	  - added computation for choppy waves.
+	  - some bugfixes.
+	  - correct wave height and normal computation.
 
 2003-12-08  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* user_interface.cpp
