more realistic water
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@361 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,5 +1,11 @@
 2003-12-14  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* user_interface.cpp ocean_wave_generator.h
+	  - more realistic water display.
+	    (will compile with opengl1.3+ only - no windows for now,
+	     maybe incorporate OglExt lib here)
+
+2003-12-14  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* user_interface.cpp ocean_wave_generator.h
 	  - added computation for water surface normals.
 	  - added computation for choppy waves.
 	  - some bugfixes.
