restored win32 compile ability
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@367 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-17  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* several files:
+	  - restored win32 compilability
+	* ocean_wave_generator.h
+	  - bugfixes.
+
 2003-12-15  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* user_interface.cpp
 	  - new bump mapped water.
