save some ram using opengl features
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@373 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -3,6 +3,9 @@
 	  dftd, adapted tinyxml.h
 	* used SDL_GL_GetProcAddress for OpenGL extensions instead
 	  of wgl/glx functions.
+	* user_interface.cpp
+	  - used automatic OpenGL texture coordinate generation to save
+	    space (display lists are smaller)
 
 2003-12-17  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* several files:
