made ready for linux release
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@386 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,4 +1,7 @@
 2003-12-28  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* released 0.0.15 for linux, VC++6 couldn't compile the code.
+
+2003-12-28  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* game:
 	  - added read/write functions for pointer to number translation and
 	    vice versa (store numbers instead of pointers in save games)
