added command class, first bits of network layer
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@430 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,11 @@
+2004-02-22  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* command.h command.cpp
+	  - added command class (needed for network communication)
+
+2004-02-21  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* airplane.* airplane_interface.*
+	  - added experimental airplane interface and test mission
+
 2004-02-09  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* coastmap, coastline, coastsegment, mapcompile, triangulate
 	  - new map format
