--- a/dangerdeep/README
+++ b/dangerdeep/README
@@ -13,10 +13,7 @@ License:
 See "LICENSE".
 
 Install:
-./configure
-make
-run "dangerdeep"
-(that's all for now)
+See "INSTALL".
 
 Gameplay
 ------------------------------------------------------
