added depths data to subs
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@572 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -3,6 +3,8 @@
 	  - mission descriptions are displayed in the menu
 	* widget
 	  - new attribute for widget_text: "sunken"
+	* submarine
+	  - parse and use depths data: scope depth, snorkel depth, alarm depth
 
 2004-05-13  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* replaced own text file parsing with xml code
