some changes about visibility
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@576 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-16  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* sea_object, sensor
+	  - changed visibility formula and factors.
+	    A bit better now, but still not realistic. Added many comments
+	    about that.
+
 2004-05-15  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* subsim, game
 	  - added choice for time period for custom missions
