--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -5,7 +5,7 @@
 	    Now custom missions are useable (if we ignore the suicidal
 	    destroyers...)
 	* subsim.cpp cfg.h cfg.cpp
-	  - added config file class. (not ready yet)
+	  - added config file class. (now working)
 
 2004-05-16  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* sea_object, sensor
