new map format (currently broken)
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@586 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-22  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* coastmap, mapcompile
+	  - moved map processing to runtime code (currently broken)
+	  - removed obsolete map compiler
+
 2004-05-21  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* game.cpp
 	  - custom missions are improved: the sub's position is now
