--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-27  Viktor Radnai <efti@gotiao.com>
+	* system.cpp system.h menu.cpp widget.cpp
+	  - made poll_event_queue() return the number of events occurred
+	  - made menus sleep instead of redrawing unless an event occurred
+
 2004-05-22  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* coastmap, mapcompile
 	  - moved map processing to runtime code (currently broken)
