new reference model
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@619 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-20  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* replaced reference class by sea_object reference counting.
+	  use assign_ref and check_ref to manage references.
+
 2004-06-19  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* BIG internal change: sea_object and heirs
 	  - sea_object contained many things that are right for ships but not for
