made game compile and run again, but most of the things doesnt work yet
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@628 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-15  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* Internal changes completed with some crude hacks to some point where the
+	  game at least compiles and runs again.
+	  Don't expect the game to work in any way, you can just look at the screens.
+	  Of course this will change back to normal some day ;-)
+
 2004-06-27  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* BIG internal transformation is going on.
 	* airplane_interface and ship_interface disabled (not included anymore in the
