show and simulate clock at periscope screen
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@874 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-07  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* fixed some keys
+	* added analogue clock to periscope screen
+
 2005-02-07  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* texture.cpp
 	 - automatic resizing of too large textures
