make water detail configureable by config file
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@876 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -2,6 +2,7 @@
 	* read keys by name from config file and not by number
 	 - will avoid problems when adding new keys somewhere in the mid of
            the key list
+	* make water detail configureable by config file
 
 2005-02-12  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* fixed some keys
