add missing changes
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@877 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -31,6 +31,7 @@
 	 - stored in config
 	 - now keyboard language independent input
 	* various small fixes all over the place
+	* Added newer periscope graphics from Luis Barrancos
 
 --- release 0.0.19
 
