Updated scons files so everything builds on Mac OSX
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@880 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-16 Andy Rice
+	* SConstruct, SConscript
+		- Updated so everything builds on Mac OSX
+
 2005-02-13  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* read keys by name from config file and not by number
 	 - will avoid problems when adding new keys somewhere in the mid of
