Added direcitonal/stereo sound and sub engine sound effects
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@954 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-10 Andy Rice
+	* Support for stereo/directional sound
+	* Sub engine noise sound effects
+	
 2005-04-03  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* added popup handling
 	* added control and TDC popup
