sea_object has ref to game now
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@964 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-18  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* each sea_object has a reference to game, removing tons of
+	  "game& gm" parameters of function calls.
+	
 2005-04-13  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* fixed bump mapping
 	* now ambient is read and used, so we have dynamic ambient light
