re-enabled 3d coastline rendering
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@982 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-07  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* coastmap.cpp
+	  - fixed all bugs except one unimportant.
+	  - 3d coast rendering works again.
+
 2005-05-06  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* coastmap.cpp/.h
 	  - many test, hacks and fixes to make coastline generation code
