now ALL map/coastline creation bugs are fixed
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@986 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,4 +1,9 @@
 2005-05-07  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* coastmap.cpp/h
+	  - finally fixed ALL map/coastline generation bugs.
+	    now all coastlines are correct!
+
+2005-05-07  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* coastmap.cpp
 	  - fixed all bugs except one unimportant.
 	  - 3d coast rendering works again.
