fixed per-pixel specular lighting
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1002 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-21  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* model.cpp/h
+	  - fixed shaders. Now specular per-pixel lighting works.
+
 2005-05-18  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* viewmodel.cpp make_mesh.cpp/h model.cpp/h modelrender*.shader
 	  - some shader improvements
