water shaders work basically, bugfixes
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1016 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,11 @@
+2005-05-29  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* water.cpp/.h
+	  - water shaders now work more or less
+	* texture.cpp
+	  - bugfix for normal map creation and mipmapping enabled
+	* water_vp.shader water_fp.shader
+	  - water shaders work, but results are not satisfying
+
 2005-05-21  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* model.cpp/h
 	  - fixed shaders. Now specular per-pixel lighting works.
