wave computation at runtime
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1029 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,10 @@
+2005-06-09  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* water.* perlinnoise.* fixed.h
+	  - speed up perlinnoise generation with new fixed point data type
+	  - water subdetail computed by perlin noise
+	  - wave tile and sub detail now computed completely on the fly, needing more CPU
+	    power but saving MUCH memory (48MB-192K)!
+
 2005-05-29  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* water.cpp/.h
 	  - water shaders now work more or less
