water bugfixes, consider displacement when drawing waves, more detail in the near by projector pos computation changes
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1034 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,16 @@
+2005-06-12  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* many files
+	  - lessened build dependencies
+	  - made code compile on gcc 4.0
+	* font.cpp
+	  - fixed "uppercase letters displayed only" bug
+	* water.cpp
+	  - water height and subdetail computed at runtime
+	  - extreme reduction of memory usage
+	  - increased vertex efficiency
+	  - consider displacement of waves when drawing water
+	  - (lots of) bugfixes
+
 2005-06-09  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* water.* perlinnoise.* fixed.h
 	  - speed up perlinnoise generation with new fixed point data type
