new torpedo management graphics
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1043 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,4 +1,9 @@
 2005-06-15  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* sub_torpedo_display, sub_tdc_display, global_data
+	  - new torpedo management graphics, new font
+	  - removed obsolete data
+
+2005-06-15  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* subsim.cpp parser.cpp texts.cpp
 	  - store and read text data by categories not by language
 	    now easier tracking of changes and handling of text
