changed sensor information usage for sonar objects, compile fixes for gcc 4.1
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1301 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/src/todo.txt
+++ b/dangerdeep/src/todo.txt
@@ -16,6 +16,9 @@ SIMULATE THE PASSIVE SONAR (HEARING EQUIPMENT)
   the AI controlled objects may call such functions as well.
   So store the results per object. We do not need to save them to a savegame.
   Cacheable functions: game::visible_*, game::sonar_*, game::radar_*
+	DONE, NEXT: do not store pointers per sonar contact (and even radar
+	contact?) but only type of signal and direction!
+	after that implement sensor classes for kdb/ghg/bg
 
 
 DAMAGE SIMULATION
